--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
 
 dependencies {
     implementation project(':core')
+    implementation project(':engine')
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.material:material:1.5.0'
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
